# lms-core-api

./: .coverage  .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
